# zenforks-cubecl

./: .gitignore  CHANGELOG.md  Cargo.toml  PHASE8F_STATE.md  README.md  ZENFORKS_README.md  typos.toml
.github/workflows/: ci.yml
crates/cubecl/: Cargo.toml
crates/cubecl-common/: Cargo.toml
crates/cubecl-core/: Cargo.toml
crates/cubecl-core/src/codegen/: compiler.rs  integrator.rs
crates/cubecl-cpp/: Cargo.toml
crates/cubecl-cpu/: Cargo.toml
crates/cubecl-cpu/src/: lib.rs
crates/cubecl-cpu/src/compiler/visitor/: mod.rs
crates/cubecl-cuda/: Cargo.toml  build.rs
crates/cubecl-cuda/src/compute/: context.rs
crates/cubecl-hip/: Cargo.toml
crates/cubecl-ir/: Cargo.toml
crates/cubecl-macros/: Cargo.toml
crates/cubecl-macros-internal/: Cargo.toml
crates/cubecl-macros/src/generate/: kernel.rs
crates/cubecl-macros/src/parse/: kernel.rs
crates/cubecl-opt/: Cargo.toml
crates/cubecl-runtime/: Cargo.toml
crates/cubecl-runtime/src/: client.rs  kernel.rs
crates/cubecl-spirv/: Cargo.toml
crates/cubecl-std/: Cargo.toml
crates/cubecl-wgpu/: Cargo.toml
crates/cubecl-wgpu/src/backend/: base.rs  metal.rs  vulkan.rs  wgsl.rs
crates/cubecl-wgpu/src/compiler/wgsl/: compiler.rs  shader.rs
crates/cubecl-zspace/: Cargo.toml
docs/: PINNED_STAGING_DESIGN_NOTES.md  PR1334_RESPONSE_DRAFT.md
examples/device_sharing/: Cargo.toml
examples/fusing/: Cargo.toml
examples/gelu/: Cargo.toml
examples/normalization/: Cargo.toml
examples/sum_things/: Cargo.toml
examples/tracing_example/: Cargo.toml
examples/upload_bench/: Cargo.toml
examples/upload_bench/src/: lib.rs
scripts/: bump_to_0_10_1.py  finalize_0_10_0_and_publish_0_10_1.sh  publish_0_10_1.sh  publish_remaining.sh  release_v0_10_0.sh  release_v0_10_1.sh  rename_to_zenforks.py
xtask/src/commands/: check.rs
