[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com",
]
categories = ["science"]
description = "Internal procedural macros for CubeCL"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-macros-internal"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-macros-internal"
version = "0.10.0"

publish = false  # never republished — consume from upstream crates.io

[lib]
proc-macro = true


[lints]
workspace = true


[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
