[package]
authors = ["Genna Wingert"]
categories = ["algorithms"]
description = "SPIR-V compiler for CubeCL"
edition.workspace = true
keywords = ["gpu", "compiler"]
license.workspace = true
name = "zenforks-cubecl-spirv"
readme.workspace = true
repository = "https://github.com/imazen/zenforks-cubecl/tree/main/crates/cubecl-spirv"
version.workspace = true


[lints]
workspace = true


[features]
default = [
    "std",
    "cubecl-common/default",
    "cubecl-core/default",
    "cubecl-runtime/default",
]
std = ["cubecl-common/std", "cubecl-core/std", "cubecl-runtime/std"]

tracing = [
    "cubecl-runtime/tracing",
    "cubecl-common/tracing",
    "cubecl-core/tracing",
    "cubecl-opt/tracing",
]


[lib]
name = "cubecl_spirv"

[dependencies]
bitflags = { workspace = true }
cubecl-common = { path = "../cubecl-common", version = "0.10.0", default-features = false }
cubecl-core = { package = "zenforks-cubecl-core", path = "../cubecl-core", version = "0.10.1" }
cubecl-runtime = { package = "zenforks-cubecl-runtime", path = "../cubecl-runtime", version = "0.10.1", default-features = false, features = [
    "channel-mutex",
] }
half = { workspace = true }
serde = { workspace = true }

hashbrown = { workspace = true }

rspirv = { workspace = true, features = ["serialize", "deserialize"] }

# Optimizer
cubecl-opt = { package = "zenforks-cubecl-opt", path = "../cubecl-opt", version = "0.10.1" }
