[package]
authors = []
name = "fusing"
publish = false
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
wgpu = ["cubecl/wgpu"]
cuda = ["cubecl/cuda"]

[dependencies]
cubecl = { package = "zenforks-cubecl", path = "../../crates/cubecl", version = "0.10.1", default-features = false }
half = { workspace = true }
